# postrider

./: LICENSE  README.rst  post.toml  pyproject.toml  setup.cfg  setup.py
docs/: HISTORY.rst
src/postrider/: __init__.py  mailer.py  post.toml  queue.py
