[metadata]
name = postrider
version = 0.1
url =
project_urls =
    Source Code =
license = MIT
author = Souheil Chelfouh
author_email = trollfot@gmail.com
maintainer = Souheil Chelfouh
maintainer_email = trollfot@gmail.com
description = Mailbox management for batched or delayed email delivery
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Communications :: Email

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.9

[options.packages.find]
where=src

[options.entry_points]


[aliases]
test = pytest
